--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simpler and more opinionated way to build apps for the hololens with Javascript and ThreeJS.",
   "main": "index.js",
   "scripts": {
+    "start": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1",
     "icons": "echo \"This will copy icons to app Assets folder\"",
     "rename": "echo \"This will rename the app inside HoloJS folder\""
@@ -29,6 +30,9 @@
   "dependencies": {
     "babelify": "^7.3.0",
     "budo": "^9.4.7",
+    "gulp": "^3.9.1",
+    "shelljs": "^0.7.6",
     "three": "^0.84.0"
-  }
+  },
+  "devDependencies": {}
 }
