--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babelify": "^7.3.0",
     "budo": "^9.4.7",
     "gulp": "^3.9.1",
+    "gulp-git": "^2.0.0",
     "shelljs": "^0.7.6",
     "three": "^0.84.0"
   },
