change license to bsd

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "js"
   ],
   "author": "Devon Bradley",
-  "license": "ISC",
+  "license": "BSD",
   "bugs": {
     "url": "https://github.com/dbradleyfl/Mixed-Reality-JS/issues"
   },
