get mrjs new and mrjs start working

--- a/template/package.json
+++ b/template/package.json
@@ -4,6 +4,8 @@
   "description": "\"App built with mrjs\"",
   "main": "app.js",
   "scripts": {
+    "build": "webpack",
+    "start": "webpack-dev-server && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
