--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "echo \"Framework being updated to webpack. Just uploading to npm to claim name\" && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "mrjs": "bin/mrjs.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dbradleyfl/Mixed-Reality-JS.git"
@@ -32,6 +35,7 @@
     "budo": "^9.4.7",
     "gulp": "^3.9.1",
     "gulp-git": "^2.0.0",
+    "shelljs": "^0.7.7",
     "three": "^0.84.0"
   },
   "devDependencies": {}
