--- a/template/package.json
+++ b/template/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "mrjs-app",
-  "version": "0.0.2",
+  "name": "mrjs-template-app",
+  "version": "0.0.3",
   "description": "\"App built with mrjs\"",
   "main": "app.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack -p --output-public-path='/'",
     "start": "webpack-dev-server && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +13,7 @@
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-env": "^1.2.2",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   },
